--- a/main.css
+++ b/main.css
@@ -10,3 +10,62 @@
     margin: 0;
     padding: 0;
   }
+
+  #myModal {
+    /* white-space: pre-line; */
+    margin: 0;
+    padding: 0;
+  }
+
+  .header {
+    overflow: hidden;
+    background-color: rgba(0, 86, 122, 0.418);
+    padding: 10px 0px;
+
+    
+  }
+  .button {
+    color:#013B54;
+  }
+  .header a {
+    float: left;
+    color: black;
+    text-align: center;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px; 
+    line-height: 25px;
+    border-radius: 4px;
+  }
+  
+  .header a.logo {
+    font-size: 25px;
+    color: grey;
+   
+    font-weight: bold;
+  }
+  
+  .header a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .header a.active {
+    background-color: #0B455E;
+    color: white;
+  }
+  
+  .header-right {
+    float: right;
+  }
+  
+  @media screen and (max-width: 500px) {
+    .header a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+    .header-right {
+      float: none;
+    }
+  }
